adeed contact info to db structure, client detail for general info and edit (without saving to server)
