# NET/DaycareSolutionSystem/DaycareSolutionSystem.Api.Host/Controllers/Employees/EmployeeDetailDTO.cs
@@ -9,6 +9,10 @@ namespace DaycareSolutionSystem.Api.Host.Controllers.Employees
 
         public DateTime Birthdate { get; set; }
 
+        public string Email { get; set; }
+
+        public string PhoneNumber { get; set; }
+
         public string ProfilePictureUri { get; set; }
 
         public EmployeePosition EmployeePosition { get; set; }
